# youtube-transcribe

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: agent-reference.md
docs/plans/: 2026-05-08-youtube-transcribe.md
docs/specs/: 2026-05-08-youtube-transcribe-design.md  2026-05-10-youtube-transcribe-v02-visual-mode-design.md  2026-05-11-youtube-transcribe-v06-analyze-design.md
scripts/: qa.sh
skills/neurolearn/: SKILL.md  __init__.py  budget.py  config.py  pipeline.py  pipeline_v02.py  transcribe.py  wizard.py
skills/neurolearn/analyze/: __init__.py  backend_resolver.py  output_writer.py  picker.py  prompt_builder.py  runner.py  select_parser.py  source_resolver.py
skills/neurolearn/backends/: assemblyai.py  base.py  custom.py  deepgram.py  factory.py  gemini.py  groq.py  openai_api.py  subtitles.py  vision_base.py  whisper_local.py
skills/neurolearn/detection/: __init__.py  base.py  frame_diff.py  llm_classify.py  matcher.py  scene.py  triggers.py  triggers_cli.py  tutorial_detect.py  video_type_detect.py  window_merge.py
skills/neurolearn/detection/data/: triggers_default.toml
skills/neurolearn/history/: __init__.py  cli.py  store.py
skills/neurolearn/presets/: __init__.py  loader.py  registry.py
skills/neurolearn/presets/data/: presets_default.toml
skills/neurolearn/quality/: __init__.py  asr_corrector.py  base.py  boh.py  diarization.py  heuristic_checker.py  perplexity.py  repetition.py  spell.py  summarizer.py  translator.py
skills/neurolearn/quality/data/: boh_phrases.txt
skills/neurolearn/report/: __init__.py  orchestrator.py  outliner.py  prompts.py  renderer.py
skills/neurolearn/report/data/: report_prompts_default.toml
skills/neurolearn/report/data/templates/: base.css  base.html
skills/neurolearn/research/: __init__.py  pipeline.py  source.py  translator.py
skills/neurolearn/shared/: __init__.py  date_filter.py  llm_screen.py  match.py  progress.py  prompts.py
skills/neurolearn/subscribes/: __init__.py  channel_resolver.py  cli.py  cookies_onboarding.py  group.py  instagram_loader.py  pipeline.py  rss.py  schedule.py  state.py  store.py
skills/neurolearn/utils/: downloader.py  output_writer.py  resolver.py  transcript_loader.py
skills/neurolearn/vision/: __init__.py  claude_vision.py  frames.py  gemini.py  ocr.py  openai_vision.py  prompts.py
skills/neurolearn/vision/data/: prompts_default.toml
skills/neurolearn/webui/: __init__.py  app.py
skills/youtube_transcribe/: SKILL.md  __init__.py  config.py  pipeline.py  pipeline_v02.py  transcribe.py
skills/youtube_transcribe/analyze/: output_writer.py  source_resolver.py
skills/youtube_transcribe/backends/: base.py  openai_api.py  subtitles.py
skills/youtube_transcribe/detection/: base.py  matcher.py  window_merge.py
skills/youtube_transcribe/detection/data/: triggers_default.toml
skills/youtube_transcribe/history/: cli.py
skills/youtube_transcribe/presets/: loader.py  registry.py
skills/youtube_transcribe/quality/: asr_corrector.py  perplexity.py  translator.py
skills/youtube_transcribe/research/: pipeline.py  translator.py
skills/youtube_transcribe/subscribes/: channel_resolver.py  cli.py  cookies_onboarding.py  group.py  instagram_loader.py  pipeline.py  schedule.py  store.py
skills/youtube_transcribe/utils/: downloader.py  output_writer.py  platform_detect.py  resolver.py
skills/youtube_transcribe/vision/: openai_vision.py  prompts.py
skills/youtube_transcribe/webui/: app.py
tests/: conftest.py  test_analyze_output.py  test_analyze_source_resolver.py  test_asr_ollama.py  test_batch_pipeline_refactor.py  test_batch_then_analyze.py  test_budget.py  test_claude_fallback.py  test_cli_analyze.py  test_cli_batch.py  test_cli_research.py  test_cli_subscribes.py  test_cli_v03_filters.py  test_cli_visual_wiring.py  test_config.py  test_custom_vision_prompt.py  test_detection_base.py  test_downloader.py  test_e2e_smoke.py  test_gemini_caching_concurrency.py  test_history_cli.py  test_instagram_url.py  test_manifest_v02.py  test_matcher_automaton_cache.py  test_matcher_compose.py  test_matcher_soft.py  test_matcher_universal.py  test_openai_api.py  test_output_writer.py  test_pipeline.py  test_pipeline_v02.py  test_platform_detect.py  test_quality_perplexity.py  test_report_cli.py  test_report_orchestrator.py  test_report_outliner.py  test_report_prompts.py  test_report_renderer.py  test_research_translator.py  test_resolver.py  (+23 more)
