[project]
name = "youtube-transcribe"
version = "0.1.0"
description = "Transcribe YouTube videos and local media via 8 interchangeable backends (Whisper local / subtitles / Gemini / Groq / OpenAI / Deepgram / AssemblyAI / custom)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "youtube-transcribe contributors" }]
keywords = ["whisper", "transcription", "youtube", "claude-code", "skill"]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.10.0",
    "youtube-transcript-api>=0.6.2",
    # Cloud SDKs (small, install all by default)
    "google-genai>=0.3.0",
    "groq>=0.11.0",
    "openai>=1.50.0",
    "deepgram-sdk>=3.7.0",
    "assemblyai>=0.34.0",
    # Local Whisper — Windows/Linux/Intel-Mac path
    # NOT installed on macOS arm64: faster-whisper 1.2+ requires onnxruntime
    # which has no wheels for macOS arm64. On Apple Silicon, use mlx-whisper
    # (см. spec §5.2: platform_detect выбирает mlx на arm64-darwin).
    "faster-whisper>=1.0.3; sys_platform != 'darwin' or platform_machine != 'arm64'",
    # Apple Silicon path (only installs on macOS arm64)
    "mlx-whisper>=0.4.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
youtube-transcribe = "skills.youtube_transcribe.transcribe:cli"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
