[project]
name = "neurolearn"
version = "0.10.4"
description = "NEUROLEARN — learn from videos. Transcribe / analyze / research / subscribe to YouTube, Instagram, TikTok and local media via 8 interchangeable backends (Whisper local / subtitles / Gemini / Groq / OpenAI / Deepgram / AssemblyAI / custom)."
readme = "README.md"
# Upper bound `<3.14` is required by `scenedetect` 0.7 (no wheels for Python 3.14
# as of 2026-05). Lift this when scenedetect adds 3.14 support.
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "NEUROLEARN contributors" }]
keywords = ["whisper", "transcription", "youtube", "instagram", "tiktok", "research", "subscribes", "claude-code", "skill"]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    # tomllib is stdlib on Python ≥3.11 — no `tomli` shim needed since requires-python = ">=3.11"
    "tomli-w>=1.0",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.10.0",
    "youtube-transcript-api>=0.6.2",
    # Cloud SDKs (small, install all by default)
    "google-genai>=1.0.0",                 # 0.x had unstable API; we target the stable Client/files/models pattern
    "groq>=0.11.0",
    "openai>=1.50.0",
    "deepgram-sdk>=7.0.0",                 # 7.x rewrote the API (client.listen.v1.media.transcribe_file); 3.x/4.x not supported by our backend
    "assemblyai>=0.34.0",
    "anthropic>=0.40.0",                   # Claude vision (v0.4) — images-only multimodal, keyframes via ffmpeg

    # Local Whisper — Windows/Linux/Intel-Mac path
    # NOT installed on macOS arm64: faster-whisper 1.2+ requires onnxruntime
    # which has no wheels for macOS arm64. On Apple Silicon, use mlx-whisper
    # (see spec §5.2: platform_detect picks mlx on arm64-darwin).
    "faster-whisper>=1.0.3; sys_platform != 'darwin' or platform_machine != 'arm64'",
    # Apple Silicon path (only installs on macOS arm64)
    "mlx-whisper>=0.4.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # === v0.2: Quality check ===
    "pyspellchecker>=0.8.0",
    "pyahocorasick>=2.1.0",
    "langdetect>=1.0.9",
    # === v0.2: Triggers (multilingual) ===
    "sentence-transformers>=3.0.0",
    "lemminflect>=0.2.3",
    "pymorphy3>=2.0.2",
    # === v0.2: Triggers CLI (preserve comments in TOML) ===
    "tomlkit>=0.13.0",
    # === v0.6: interactive picker for `analyze` command ===
    "questionary>=2.0",
    # === v0.2: Detection ===
    "scenedetect>=0.6.4",
    "imagehash>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# OCR — opt-in. Pytesseract requires system `tesseract` binary
# (brew install tesseract / apt-get install tesseract-ocr).
# easyocr — fallback, heavy (60MB models), but no system deps.
ocr = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
]

# Perplexity — opt-in. Uses transformers directly (already pulled by
# sentence-transformers core dep). On first call downloads GPT-2 small
# (~500 MB) for English; non-English languages skip the brick.
# No new dep — listed here so user can `--extra perplexity` to indicate intent
# (currently a no-op marker; future multilingual models may add real deps).
perplexity = []

# Web UI — opt-in. Gradio + uvicorn together pull ~100 MB. Launches via
# `neurolearn webui` and binds to 127.0.0.1 by default.
webui = [
    "gradio>=4.0.0",
]

# Speaker diarization — opt-in. pyannote.audio requires HuggingFace
# token AND license acceptance for the model at
# https://huggingface.co/pyannote/speaker-diarization-3.1.
# Heavy: pulls torchaudio + pretrained model on first use (~500 MB).
diarization = [
    "pyannote.audio>=3.0.0",
]

# Instagram fallback — opt-in. Used by `subscribes update` when yt-dlp's
# Instagram extractor is broken upstream (happens periodically).
# Pure Python, ~5 MB total. See feedback_cookies_strict_file_only.md
# memory rule: this tool reads only the Netscape cookies.txt file the
# user registered, not their full browser cookie store.
instagram = [
    "instaloader>=4.13",
]

# PDF report generation — opt-in. WeasyPrint renders HTML→PDF (LGPL,
# free). Needs cairo / pango system libs on macOS (brew install pango)
# and Linux (apt install libpango-1.0-0 libpangoft2-1.0-0). On Windows
# WeasyPrint additionally requires GTK runtime. The `report` extra
# bundles the Python side; system libs are installed once by the user
# following the on-demand hint printed by `neurolearn report`.
report = [
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "markdown>=3.6",
]

[project.scripts]
neurolearn = "skills.neurolearn.transcribe:cli"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]
include = [
    "skills/neurolearn/presets/data/*.toml",
    "skills/neurolearn/vision/data/*.toml",
    "skills/neurolearn/report/data/*.toml",
    "skills/neurolearn/report/data/templates/*.html",
    "skills/neurolearn/report/data/templates/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
